Update: Henri received Euro-par 2014 achievement award!

--- a/content/awards.html
+++ b/content/awards.html
@@ -1,5 +1,24 @@
+<h1>Henri Bal receives the Euro-Par Achievement Award 2014!</h1>
+<p>
+Professor Henri Bal received the Euro-Par Achievement Award 2014.
+Euro-Par is the major European conference series on parallel processing.
+With the award, Euro-Par has yearly honoured one computer scientist since 2008.</p>
+<p>
+The 20th Euro-Par conference was held in Porto, Portugal, 25-29 August 2014,
+and attracted almost 300 participants from all over the world.
+Henri Bal gave a keynote presentation about the shared research infrastructure
+for Dutch Computer Science, the Distributed ASCI Supercomputer, which is
+organized by the ASCI research school.</p>
+<p>
+The award was presented by the chair of the Euro-Par Steering Committee,
+Professor Christian Lengauer, in appreciation of Professor Bal's outstanding
+and sustained contributions to parallel processing in the Netherlands and
+beyond, including his research on parallel programming environments and his
+work on the DAS infrastructure.
+For more information about the award,
+see <a href="http://www.europar.org/?q=node/7">the Euro-Par site</a></p>
+
 <h1>WebPie wins 1st prize at the SCALE Challenge 2010!</h1>
-<p>Details soon on this page!</p>
 
 <p>&nbsp;</p><p>&nbsp;</p>
 <hr size="2"/>
