--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,11 @@
 <tr>
     <td class="news">
+	<a href="news.html#europar2014" class="news">Henri Bal receives Euro-Par Achievement Award</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#javagat2.1.2" class="news">JavaGAT 2.1.2 released</a>
     </td>
 </tr>
