--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,12 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<h2>2014</h2>
+<a name="europar2014"></a>
+<h4>Henri Bal receives the Euro-Par Achievement Award 2014</h4>
+<p>August 2014: Professor Henri Bal received the Euro-Par Achievement Award 2014. Euro-Par is the major European conference series on parallel processing. With the award, Euro-Par has yearly  honoured one computer scientist since 2008. For more information, see the <a href="http://www.cs.vu.nl/ibis/awards.html#Euro-Par Achievement Award 2014">Awards</a> page.</p>
+
+
 <h2>2012</h2>
 
 <a name="javagat2.1.2"></a> 
